<resources>
  <string name="app_name">RootEncoder streamer</string>
  <string name="version">Version: %1$s</string>

  <string name="rtsp_streamer">Custom RTSP</string>
  <string name="rtmp_streamer">Custom RTMP</string>
  <string name="default_rtmp">Default RTMP</string>
  <string name="default_rtsp">Default RTSP</string>
  <string name="default_srt">Default SRT</string>
  <string name="from_file_rtsp">From file RTSP</string>
  <string name="from_file_rtmp">From file RTMP</string>
  <string name="surface_mode_rtsp">Surface mode RTSP</string>
  <string name="surface_mode_rtmp">Surface mode RTMP</string>
  <string name="texture_mode_rtsp">Texture mode RTSP</string>
  <string name="texture_mode_rtmp">Texture mode RTMP</string>
  <string name="display_rtmp">Display RTMP or RTSP</string>
  <string name="opengl_rtmp">OpenGl RTMP</string>
  <string name="opengl_rtsp">OpenGl RTSP</string>
  <string name="opengl_srt">OpenGl SRT</string>
  <string name="opengl_generic">OpenGl Generic</string>
  <string name="service_rtp">Service RTP</string>
  <string name="cube_test_rtmp">Cube test RTMP</string>
  <string name="rotation_rtmp">Rotation RTMP</string>

  <string name="tv_select">Select your streamer</string>
  <string name="hint_rtsp">rtsp://yourendpoint</string>
  <string name="hint_rtmp">rtmp://yourendpoint</string>
  <string name="hint_srt">srt://yourendpoint</string>
  <string name="start_button">Start stream</string>
  <string name="stop_button">Stop stream</string>
  <string name="switch_camera_button">Switch camera</string>
  <string name="select_file">Select file</string>
  <string name="start_record">Start record</string>
  <string name="stop_record">Stop record</string>
  <string name="resync_file">ReSync file</string>
  <!--menu-->
  <string name="microphone">Microphone</string>
  <string name="filters">Filters</string>
  <string name="clear">Clear</string>
  <string name="grey_scale">Grey scale</string>
  <string name="negative">Negative</string>
  <string name="sepia">Sepia</string>
  <string name="aqua">Aqua</string>
  <string name="posterize">Posterize</string>
  <!--gl menu-->
  <string name="enable_disable_fxaa">enable/disable FXAA</string>
  <!--filters-->
  <string name="no_filter">No filter</string>
  <string name="analog_tv">Analog TV</string>
  <string name="android_view">Android view</string>
  <string name="basic_deformation">Basic deformation</string>
  <string name="beauty">Beauty</string>
  <string name="black">Black</string>
  <string name="blur">Blur</string>
  <string name="brightness">Brightness</string>
  <string name="cartoon">Cartoon</string>
  <string name="chroma">Chroma</string>
  <string name="circle">Circle</string>
  <string name="color">Color</string>
  <string name="contrast">Contrast</string>
  <string name="duotone">Duotone</string>
  <string name="earlybird">EarlyBird</string>
  <string name="edge_detection">Edge detection</string>
  <string name="exposure">Exposure</string>
  <string name="fire">Fire</string>
  <string name="gamma">Gamma</string>
  <string name="glitch">Glitch</string>
  <string name="gif">Gif</string>
  <string name="halftone_lines">Halftone lines</string>
  <string name="image">Image</string>
  <string name="image_70s">Image 70s</string>
  <string name="lamoish">Lamoish</string>
  <string name="money">Money</string>
  <string name="pixelated">Pixelated</string>
  <string name="polygonization">Polygonization</string>
  <string name="rgb_saturate">RGB saturate</string>
  <string name="ripple">Ripple</string>
  <string name="rotation">Rotation</string>
  <string name="saturation">Saturation</string>
  <string name="surface_filter">Surface filter</string>
  <string name="rainbow">Rainbow</string>
  <string name="sharpness">Sharpness</string>
  <string name="snow">Snow</string>
  <string name="swirl">Swirl</string>
  <string name="temperature">Temperature</string>
  <string name="text">Text</string>
  <string name="zebra">Zebra</string>
  <!--drawer-->
  <string name="drawer_title">Options</string>
  <string name="protocols">Protocol</string>
  <string name="tcp">TCP</string>
  <string name="udp">UDP</string>
  <string name="video">Video</string>
  <string name="audio">Audio</string>
  <string name="resolution">Resolution</string>
  <string name="video_bitrate">Bitrate (on fly)</string>
  <string name="audio_bitrate">Bitrate</string>
  <string name="fps">FPS</string>
  <string name="orientation">Orientation</string>
  <string name="hardware_rotation">Hardware rotation</string>
  <string name="samplerate">SampleRate</string>
  <string name="channel">Channel</string>
  <string name="stereo">Stereo</string>
  <string name="mono">Mono</string>
  <string name="echo_canceler">Echo canceler</string>
  <string name="camera">Camera</string>
  <string name="auth">Auth</string>
  <string name="user">User</string>
  <string name="password">Password</string>
  <string name="noise_suppressor">Noise suppressor</string>
  <string name="video_source">Video source</string>
  <string name="audio_source">Audio source</string>
  <string name="camera1">Camera1</string>
  <string name="camera2">Camera2</string>
  <string name="screen">Screen</string>
  <string name="internal">Internal</string>
  <string name="hint_protocol">protocol://yourendpoint</string>
</resources>
