<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item
      android:id="@+id/e_d_fxaa"
      android:title="@string/enable_disable_fxaa"
    />
  <item
      android:title="@string/filters"
      >
    <menu>
      <item
          android:id="@+id/no_filter"
          android:title="@string/no_filter"
          />
      <item
          android:id="@+id/analog_tv"
          android:title="@string/analog_tv"
          />
      <item
          android:id="@+id/android_view"
          android:title="@string/android_view"
          />
      <item
          android:id="@+id/basic_deformation"
          android:title="@string/basic_deformation"
          />
      <item
          android:id="@+id/beauty"
          android:title="@string/beauty"
          />
      <item
          android:id="@+id/black"
          android:title="@string/black"
          />
      <item
          android:id="@+id/blur"
          android:title="@string/blur"
          />
      <item
          android:id="@+id/brightness"
          android:title="@string/brightness"
          />
      <item
          android:id="@+id/cartoon"
          android:title="@string/cartoon"
          />
      <item
          android:id="@+id/chroma"
          android:title="@string/chroma"
          />
      <item
          android:id="@+id/circle"
          android:title="@string/circle"
          />
      <item
          android:id="@+id/color"
          android:title="@string/color"
          />
      <item
          android:id="@+id/contrast"
          android:title="@string/contrast"
          />
      <item
          android:id="@+id/duotone"
          android:title="@string/duotone"
          />
      <item
          android:id="@+id/early_bird"
          android:title="@string/earlybird"
          />
      <item
          android:id="@+id/edge_detection"
          android:title="@string/edge_detection"
          />
      <item
          android:id="@+id/exposure"
          android:title="@string/exposure"
          />
      <item
          android:id="@+id/fire"
          android:title="@string/fire"
          />
      <item
          android:id="@+id/gamma"
          android:title="@string/gamma"
          />
      <item
          android:id="@+id/glitch"
          android:title="@string/glitch"
          />
      <item
          android:id="@+id/gif"
          android:title="@string/gif"
          />
      <item
          android:id="@+id/grey_scale"
          android:title="@string/grey_scale"
          />
      <item
          android:id="@+id/halftone_lines"
          android:title="@string/halftone_lines"
          />
      <item
          android:id="@+id/image"
          android:title="@string/image"
          />
      <item
          android:id="@+id/image_70s"
          android:title="@string/image_70s"
          />
      <item
          android:id="@+id/lamoish"
          android:title="@string/lamoish"
          />
      <item
          android:id="@+id/money"
          android:title="@string/money"
          />
      <item
          android:id="@+id/negative"
          android:title="@string/negative"
          />
      <item
          android:id="@+id/pixelated"
          android:title="@string/pixelated"
          />
      <item
          android:id="@+id/polygonization"
          android:title="@string/polygonization"
          />
      <item
          android:id="@+id/rainbow"
          android:title="@string/rainbow"
          />
      <item
          android:id="@+id/rgb_saturate"
          android:title="@string/rgb_saturate"
          />
      <item
          android:id="@+id/ripple"
          android:title="@string/ripple"
          />
      <item
          android:id="@+id/rotation"
          android:title="@string/rotation"
          />
      <item
          android:id="@+id/saturation"
          android:title="@string/saturation"
          />
      <item
          android:id="@+id/sepia"
          android:title="@string/sepia"
          />
      <item
          android:id="@+id/sharpness"
          android:title="@string/sharpness"
          />
      <item
          android:id="@+id/snow"
          android:title="@string/snow"
          />
      <item
          android:id="@+id/swirl"
          android:title="@string/swirl"
          />
      <item
          android:id="@+id/surface_filter"
          android:title="@string/surface_filter"
          />
      <item
          android:id="@+id/temperature"
          android:title="@string/temperature"
          />
      <item
          android:id="@+id/text"
          android:title="@string/text"
          />
      <item
          android:id="@+id/zebra"
          android:title="@string/zebra"
          />
    </menu>
  </item>
</menu>