<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
  <item
      android:icon="@drawable/icon_mobile"
      android:title="@string/microphone"
      app:showAsAction="always"
      >
    <menu>
      <item
          android:id="@+id/microphone"
          android:icon="@drawable/icon_microphone"
          android:title="@string/microphone"
          app:showAsAction="always"
          />
      <item
          android:id="@+id/camera"
          android:icon="@drawable/icon_camera"
          android:title="@string/camera"
          app:showAsAction="always"
          />
    </menu>
  </item>
  <item
      android:id="@+id/filters"
      android:icon="@drawable/icon_menu"
      android:title="@string/filters"
      app:showAsAction="ifRoom"
      >

    <menu>
      <item
          android:id="@+id/clear"
          android:title="@string/clear"
          />
      <item
          android:id="@+id/grey_scale"
          android:title="@string/grey_scale"
          />
      <item
          android:id="@+id/sepia"
          android:title="@string/sepia"
          />
      <item
          android:id="@+id/negative"
          android:title="@string/negative"
          />
      <item
          android:id="@+id/aqua"
          android:title="@string/aqua"
          />
      <item
          android:id="@+id/posterize"
          android:title="@string/posterize"
          />
    </menu>
  </item>
</menu>
