<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
  <item android:title="@string/protocols">
    <menu>
      <item
          android:title="@string/tcp"
          app:actionViewClass="android.widget.RadioButton"
          android:id="@+id/rb_tcp"
          />
    </menu>
  </item>
  <item android:title="@string/video">
    <menu>
      <item
          android:title="@string/resolution"
          app:actionViewClass="android.widget.Spinner"
          android:id="@+id/sp_resolution"
          />
      <item
          android:title="@string/bitrate"
          app:actionLayout="@xml/edit_text_int"
          android:id="@+id/et_video_bitrate"
          />
      <item
          android:title="@string/fps"
          app:actionLayout="@xml/edit_text_int"
          android:id="@+id/et_fps"
          />
      <item
          android:title="@string/orientation"
          app:actionViewClass="android.widget.Spinner"
          android:id="@+id/sp_orientation"
          />
    </menu>
  </item>
  <item android:title="@string/audio">
    <menu>
      <item
          android:title="@string/bitrate"
          app:actionLayout="@xml/edit_text_int"
          android:id="@+id/et_audio_bitrate"
          />
      <item
          android:title="@string/samplerate"
          app:actionLayout="@xml/edit_text_int"
          android:id="@+id/et_samplerate"
          />
      <item
          android:title="@string/channel"
          app:actionLayout="@xml/radio_group_audio"
          android:id="@+id/channel"
          />
    </menu>
  </item>
</menu>