<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start"
    >

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >
  <SurfaceView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:id="@+id/surfaceView"
      />

  <EditText
      android:hint="@string/hint_rtsp"
      android:textColor="@color/colorPrimaryDark"
      android:textColorHint="@color/colorPrimaryDark"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:layout_margin="20dp"
      android:id="@+id/et_rtsp_url"
      />

  <Button
      android:text="@string/start_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_alignParentLeft="true"
      android:layout_margin="20dp"
      android:id="@+id/b_start_stop"
      />

  <Button
      android:text="@string/switch_camera_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_alignParentRight="true"
      android:layout_margin="20dp"
      android:id="@+id/switch_camera"
      />
  </RelativeLayout>

  <android.support.design.widget.NavigationView
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_gravity="start"
      android:paddingBottom="20dp"
      android:fitsSystemWindows="true"
      app:headerLayout="@layout/options_header"
      app:menu="@menu/options_rtsp"
      android:id="@+id/nv_rtsp"
      />
</android.support.v4.widget.DrawerLayout>
