<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_example_rtmp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
  <com.pedro.rtplibrary.view.OpenGlView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:id="@+id/surfaceView"
      app:keepAspectRatio="true"
      app:aspectRatioMode="adjust"
      app:AAEnabled="false"
      app:numFilters="1"
      app:isFlipHorizontal="false"
      app:isFlipVertical="false"
      />

  <EditText
      android:textColor="@color/appColor"
      android:textColorHint="@color/appColor"
      android:inputType="textUri"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:layout_margin="20dp"
      android:id="@+id/et_rtp_url"
      app:layout_constraintTop_toTopOf="parent"
      />

  <Button
      android:text="@string/start_record"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/b_record"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toStartOf="@id/b_start_stop"
      app:layout_constraintHorizontal_chainStyle="spread"
      android:layout_marginBottom="20dp"
      />

  <Button
      android:text="@string/start_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/b_start_stop"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toEndOf="@id/b_record"
      app:layout_constraintEnd_toStartOf="@id/switch_camera"
      android:layout_marginBottom="20dp"
      />

  <Button
      android:text="@string/switch_camera_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/switch_camera"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/b_start_stop"
      android:layout_marginBottom="20dp"
      />
</androidx.constraintlayout.widget.ConstraintLayout>
